[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/components/loading_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/controllers/server_state_indicator.gd" type="Script" id=2]

[node name="ServerStateIndicator" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 28.0

[node name="AIProcessLabel" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 33.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_top = 4.0
margin_right = 37.0
margin_bottom = 24.0

[node name="Spacing" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 960.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 964.0
margin_right = 1024.0
margin_bottom = 28.0
theme_type_variation = "TerminateButton"
text = "CANCEL"

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 25 )
border_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_width = 2.0
editor_only = false

[node name="LoadingBar" type="HSplitContainer" parent="VBoxContainer/ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 0
split_offset = 512
dragger_visibility = 2

[node name="Bar" type="ColorRect" parent="VBoxContainer/ReferenceRect/LoadingBar"]
margin_right = 512.0
margin_bottom = 25.0

[node name="Empty" type="ColorRect" parent="VBoxContainer/ReferenceRect/LoadingBar"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 25.0
color = Color( 1, 1, 1, 0 )

[node name="Consoles" type="TabContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
tab_align = 0

[node name="SERVER_LOG" type="RichTextLabel" parent="VBoxContainer/Consoles"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true
selection_enabled = true

[node name="PROGRAM_LOG" type="RichTextLabel" parent="VBoxContainer/Consoles"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true
selection_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="tab_changed" from="VBoxContainer/Consoles" to="." method="_on_Consoles_tab_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
